Fix landing page in dark mode

--- a/master.css
+++ b/master.css
@@ -64,6 +64,7 @@ a:hover {
   }
   #middlebanner {
     background-color: rgba(0, 0, 0, 0.65);
+    background-image: unset;
   }
 }
 
